--- a/API/CodePulse/CodePulse.API/appsettings.json
+++ b/API/CodePulse/CodePulse.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodePulseConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CodePulseDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
