Add Authentication Configuration

--- a/API/CodePulse/CodePulse.API/appsettings.json
+++ b/API/CodePulse/CodePulse.API/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CodePulseConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CodePulseDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Jwt": {
+    "Key": "dslkfjgfkldsjgfdlskjg4590865490",
+    "Issuer": "https://localhost:7024",
+    "Audience": "https://localhost:4200"
   }
+
+
 }
